--- a/frontend/index.html
+++ b/frontend/index.html
@@ -297,7 +297,21 @@
     </div>
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <script src="https://unpkg.com/overlapping-marker-spiderfier-leaflet/oms.min.js"></script>
+    <!-- <script src="https://unpkg.com/overlapping-marker-spiderfier-leaflet/oms.min.js"></script> -->
     <script src="main.js"></script>
+</body>
+</html>
+    <!-- Modal para seleccionar entre múltiples cierres en la misma ubicación -->
+    <div id="modal-selector-cierres" class="modal-overlay" style="display:none;">
+        <div class="modal-selector-content">
+            <div class="modal-selector-header">
+                <h3 id="modal-selector-titulo">Cierres en esta ubicación</h3>
+                <button onclick="cerrarModalSelector()" class="close-modal-selector">✕</button>
+            </div>
+            <div id="modal-selector-listado" class="modal-selector-listado">
+                <!-- Se llena dinámicamente con los cierres -->
+            </div>
+        </div>
+    </div>
 </body>
 </html>
